cabal-version:   3.0
name:            jwt-decode
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Alex Vzorov
maintainer:      alex.vzorov@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable jwt-decode
  default-language: GHC2021
  ghc-options:      -Wall
  import:           warnings
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base          ^>=4.17.0.0
    , bytestring
    , jose-jwt
